--- a/src/components/MainFormStart/mainformstart.module.css
+++ b/src/components/MainFormStart/mainformstart.module.css
@@ -30,6 +30,10 @@
   color: #ffffff;
 }
 
+.form_start_form button:hover {
+  box-shadow: 0px 0px 5px #5558fa;
+}
+
 .error {
   margin-top: -15px;
   margin-bottom: 5px;
