--- a/src/components/ThirdForm/thirdform.module.css
+++ b/src/components/ThirdForm/thirdform.module.css
@@ -1,28 +1,9 @@
-.firstform {
+.thirdform {
   display: flex;
   flex-direction: column;
-  margin-top: 62px;
+  margin-top: 66px;
   margin-left: 110px;
   width: 300px;
-}
-
-.firstform input {
-  margin-top: 8px;
-  height: 22px;
-  width: 100%;
-  border-radius: 4px;
-  padding: 12px;
-  border: 1px solid rgba(0, 0, 0, 0.16);
-}
-
-.firstform select {
-  margin-top: 8px;
-  height: 44px;
-  width: 100%;
-  border-radius: 4px;
-  padding: 12px;
-  border: 1px solid rgba(0, 0, 0, 0.16);
-  cursor: pointer;
 }
 
 .firstform label {
@@ -30,6 +11,15 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+}
+
+.thirdform textarea {
+  margin-top: 8px;
+  width: 680px;
+  height: 84px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.16);
+  border-radius: 4px;
 }
 
 .tooltip {
