--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   background-color: rgb(245, 245, 245);
 
   font-family: "SB Sans Interface";
+  font-style: normal;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
