--- a/src/pages/FormConstruct/formconstruct.module.css
+++ b/src/pages/FormConstruct/formconstruct.module.css
@@ -15,30 +15,27 @@
   margin-top: 88px;
 }
 
-.main_button_back {
-  height: 44px;
-  width: 79px;
+.modalBack {
+  background: rgba(0, 0, 0, 0.16);
+  position: absolute;
+  width: 100vw;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 32px;
+  position: absolute;
+  width: 460px;
+  height: 312px;
+  left: calc(50% - 460px / 2);
+  top: calc(50% - 312px / 2 - 0.5px);
   background: #ffffff;
-  border: 1px solid #5558fa;
-  border-radius: 4px;
-  color: #5558fa;
-  margin-left: 110px;
-  margin-right: 546px;
-}
-
-.main_button_forth {
-  height: 44px;
-  width: 79px;
-  background: #5558fa;
-  border: 1px solid #5558fa;
-  border-radius: 4px;
-  color: #ffffff;
-}
-
-.main_button_back:hover {
-  box-shadow: 0px 0px 5px #5558fa;
-}
-
-.main_button_forth:hover {
-  box-shadow: 0px 0px 5px #5558fa;
+  box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.08);
+  border-radius: 12px;
 }
