update 3.0 added fieldArray, fixes,

--- a/src/components/SecondForm/secondform.module.css
+++ b/src/components/SecondForm/secondform.module.css
@@ -6,6 +6,10 @@
   width: 300px;
 }
 
+.secondform_array {
+  display: flex;
+  flex-direction: row;
+}
 .secondform_inputs {
   margin-top: 8px;
   height: 22px;
