--- a/src/components/FirstForm/firstform.module.css
+++ b/src/components/FirstForm/firstform.module.css
@@ -3,13 +3,16 @@
   flex-direction: column;
   margin-top: 62px;
   margin-left: 110px;
-  width: 300px;
+  width: auto;
+  margin-left: 110px;
+  margin-right: 110px;
 }
 
 .firstform input {
   margin-top: 8px;
   height: 22px;
-  width: 100%;
+  width: auto;
+  max-width: 270px;
   border-radius: 4px;
   padding: 12px;
   border: 1px solid rgba(0, 0, 0, 0.16);
@@ -18,7 +21,8 @@
 .firstform select {
   margin-top: 8px;
   height: 44px;
-  width: 100%;
+  width: auto;
+  max-width: 295px;
   border-radius: 4px;
   padding: 12px;
   border: 1px solid rgba(0, 0, 0, 0.16);
@@ -26,14 +30,12 @@
 }
 
 .firstform label {
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
 }
 
 .tooltip {
-  font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
@@ -52,7 +54,31 @@
   z-index: 1;
 }
 
+.tooltip_text_big {
+  visibility: hidden;
+  color: #5558fa;
+  background-color: #fff;
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip_text_medium {
+  visibility: hidden;
+  color: #5558fa;
+  background-color: #fff;
+  position: absolute;
+  z-index: 1;
+}
+
 .tooltip:hover .tooltip_text {
+  visibility: visible;
+}
+
+.tooltip:hover .tooltip_text_big {
+  visibility: visible;
+}
+
+.tooltip:hover .tooltip_text_medium {
   visibility: visible;
 }
 
@@ -62,5 +88,21 @@
   line-height: 20px;
   color: red;
   margin-top: -20px;
-  text-align: center;
+}
+
+@media screen and (max-width: 640px) {
+  .firstform {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .tooltip_text_big {
+    margin-left: -25px;
+  }
+
+  .tooltip_text_medium {
+    margin-left: -40px;
+  }
 }
