--- a/src/components/MainBody/mainbody.module.css
+++ b/src/components/MainBody/mainbody.module.css
@@ -1,6 +1,6 @@
 .form_start {
   margin: 24px;
-  width: 400px;
+  width: auto;
 }
 
 .form_start_form {
@@ -12,8 +12,8 @@
   margin-top: 8px;
   margin-bottom: 24px;
   height: 22px;
-  width: 100%;
-  border-radius: 4px;
+  width: auto;
+  max-width: 270px;
   padding: 12px;
   background: rgba(0, 0, 0, 0.04);
   border: 1px solid rgba(0, 0, 0, 0.16);
@@ -32,10 +32,4 @@
 
 .form_start_form button:hover {
   box-shadow: 0px 0px 5px #5558fa;
-}
-
-.error {
-  margin-top: -15px;
-  margin-bottom: 5px;
-  color: red;
 }
