--- a/src/components/ModalFail/modalfail.module.css
+++ b/src/components/ModalFail/modalfail.module.css
@@ -15,7 +15,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 396px;
+  width: auto;
   height: 28px;
 }
 
@@ -23,12 +23,16 @@
   background: rgba(0, 0, 0, 0.04);
   height: 28px;
   width: 28px;
-  border: #ffffff00;
+  border: none;
   border-radius: 50%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+.modal_fail_xmark:hover {
+  box-shadow: 0px 0px 5px #5558fa;
 }
 
 .modal_fail_xmark svg {
@@ -38,7 +42,7 @@
 }
 
 .modal_fail_symbol {
-  width: 396px;
+  width: auto;
   height: 132px;
   left: calc(50% - 396px / 2);
   top: calc(50% - 132px / 2 - 8.5px);
@@ -70,6 +74,10 @@
   line-height: 20px;
 }
 
+.modal_fail_button:hover {
+  box-shadow: 0px 0px 5px #5558fa;
+}
+
 .modal_circle_fail {
   border-radius: 50%;
   animation: pulseFail 2s infinite;
@@ -92,4 +100,16 @@
   height: 38.4px;
   width: 38.4px;
   color: #e84e58;
+}
+
+@media screen and (max-width: 935px) {
+  .modal_fail_button_div {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .modal_fail_button_div {
+    width: 220px;
+  }
 }
