--- a/src/components/SecondForm/secondform.module.css
+++ b/src/components/SecondForm/secondform.module.css
@@ -3,24 +3,73 @@
   flex-direction: column;
   margin-top: 66px;
   margin-left: 110px;
-  width: 300px;
+  margin-right: 110px;
+  width: auto;
 }
 
 .secondform_array {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
-.secondform_inputs {
+
+.secondform_array_input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: auto;
+  max-width: 330px;
+}
+
+.secondform_array_input input {
   margin-top: 8px;
   height: 22px;
-  width: 100%;
+  width: 300px;
   border-radius: 4px;
   padding: 12px;
   border: 1px solid rgba(0, 0, 0, 0.16);
 }
 
+.button_add {
+  margin-top: 8px;
+  width: 44px;
+  height: 44px;
+  background-color: #fff;
+  border: 1.5px solid #5558fa;
+  border-radius: 4px;
+}
+
+.button_add:hover {
+  box-shadow: 0px 0px 5px #5558fa;
+}
+
+.button_add svg {
+  width: 12px;
+  height: 12px;
+  color: #5558fa;
+}
+
+.button_remove {
+  background-color: #fff;
+  border: none;
+  margin-left: 5.5px;
+  margin-top: 8px;
+}
+
+.button_remove svg {
+  width: 15;
+  height: 15.2;
+  color: #cccccc;
+}
+
+.button_remove svg:hover {
+  color: #ff0000;
+}
+
+.groups_head_label {
+  margin-top: 24px;
+}
+
 .secondform label {
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
@@ -30,6 +79,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100px;
 }
 
 .error {
@@ -37,6 +87,12 @@
   font-size: 14px;
   line-height: 20px;
   color: red;
-  margin-top: -20px;
-  text-align: center;
+  margin-top: 5px;
+}
+
+@media screen and (max-width: 650px) {
+  .secondform {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
 }
