--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: rgb(245, 245, 245);
 
   font-family: "SB Sans Interface";
@@ -12,4 +10,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#root {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
