--- a/src/pages/FormConstruct/formconstruct.module.css
+++ b/src/pages/FormConstruct/formconstruct.module.css
@@ -2,8 +2,6 @@
   background-color: #ffffff;
   border-radius: 24px;
   width: 900px;
-  margin-left: 233px;
-  margin-right: 233px;
   margin-top: 24px;
 
   display: flex;
@@ -13,6 +11,8 @@
 .main_buttons {
   margin-bottom: 80px;
   margin-top: 88px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .modalBack {
@@ -33,9 +33,49 @@
   position: absolute;
   width: 460px;
   height: 312px;
-  left: calc(50% - 460px / 2);
+  left: calc(50% - 522px / 2);
   top: calc(50% - 312px / 2 - 0.5px);
   background: #ffffff;
   box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.08);
   border-radius: 12px;
+}
+
+@media screen and (max-width: 935px) {
+  .main {
+    width: 600px;
+  }
+
+  .modal {
+    width: 300px;
+    left: calc(50% - 370px / 2);
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .main {
+    width: 390px;
+  }
+
+  .modal {
+    width: 200px;
+    left: calc(50% - 270px / 2);
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .main {
+    width: 425px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .main {
+    width: 375px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .main {
+    width: 320px;
+  }
 }
