--- a/src/pages/Main/main.module.css
+++ b/src/pages/Main/main.module.css
@@ -3,10 +3,37 @@
   border-radius: 12px 12px 0px 0px;
   height: 704px;
   width: 900px;
-  margin-left: 233px;
-  margin-right: 233px;
   margin-top: 24px;
-
   display: flex;
   flex-direction: column;
+}
+
+@media screen and (max-width: 935px) {
+  .main {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .main {
+    width: 390px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .main {
+    width: 425px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .main {
+    width: 375px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .main {
+    width: 320px;
+  }
 }
